@startuml UpdateAchievementClassDiagram
!theme plain
skinparam classBackgroundColor #f0f0f0
skinparam classBorderColor #333
skinparam arrowColor #333
left to right direction

' CONTROLLER LAYER
class AchievementController {}

' GUARD LAYER
class AuthGuard {}
class RoleGuard {}

' DTO LAYER
class CreateEventCountAchievementDto {}
class CreateStreakAchievementDto {}
class CreatePropertyCheckAchievementDto {}
class UpdateEventCountAchievementDto {}
class UpdateStreakAchievementDto {}
class UpdatePropertyCheckAchievementDto {}

' SERVICE LAYER
class AchievementService {}
class BunnyService {}

' ENTITY LAYER
class Achievement {}
class EventCountAchievement {}
class StreakAchievement {}
class PropertyCheckAchievement {}
class LearnerProgress {}
class User {}

' RELATIONSHIPS
AchievementController --> AuthGuard
AchievementController --> RoleGuard
AchievementController --> AchievementService
AchievementController --> CreateEventCountAchievementDto
AchievementController --> CreateStreakAchievementDto
AchievementController --> CreatePropertyCheckAchievementDto
AchievementController --> UpdateEventCountAchievementDto
AchievementController --> UpdateStreakAchievementDto
AchievementController --> UpdatePropertyCheckAchievementDto

AchievementService --> BunnyService
AchievementService --> Achievement
AchievementService --> EventCountAchievement
AchievementService --> StreakAchievement
AchievementService --> PropertyCheckAchievement
AchievementService --> LearnerProgress

EventCountAchievement --|> Achievement
StreakAchievement --|> Achievement
PropertyCheckAchievement --|> Achievement

LearnerProgress --> Achievement
LearnerProgress --> User

@enduml
  --
  +canActivate(context): boolean
}

class RoleGuard {
  --
  +canActivate(context): boolean
  -checkAdminRole(user): boolean
}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

AchievementEditPanel --> AchievementController: calls

AchievementController --> AchievementService: delegates
AchievementController --> AuthGuard: validates
AchievementController --> RoleGuard: checks admin

AchievementService --> EventCountAchievement: updates
AchievementService --> StreakAchievement: updates
' Entity relationships
EventCountAchievement --|> Achievement: extends
StreakAchievement --|> Achievement: extends
PropertyCheckAchievement --|> Achievement: extends

LearnerProgress --> Achievement: tracks
LearnerProgress --> User: belongs to

@enduml
